--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "better-sqlite3": "^11.9.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-oauth2-jwt-bearer": "^1.6.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
